<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/labelInfoTutorialTitle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewYoutube"
                android:src="@drawable/yt_thumbnail"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"/>






            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/labelInfoTipsTitle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/labelInfoTipsBody"
                android:layout_marginTop="16dp"/>






            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/labelInfoContactTitle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/labelInfoContactMessage"
                android:id="@+id/textViewContact"
                android:layout_marginTop="16dp"/>






            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/labelInfoWhyTitle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewMeme"
                android:src="@drawable/timer1"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>


    </ScrollView>

</FrameLayout>